# moria

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md
