[project]
name = "mori"
version = "0.1.0"
description = "基于 AgentScope 的虚拟 AI 女友系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentscope>=1.0.8",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "mem0ai>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/acgurl/mori"
Documentation = "https://github.com/acgurl/mori/blob/main/README.md"
Repository = "https://github.com/acgurl/mori"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.hatch.build.targets.wheel]
packages = ["mori"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
